# BraneShop.github.io

./: 6-week-workshop-on-deep-learning.html  CNAME  LICENSE  README.md  advisory-and-consulting.html  ai-for-leadership.html  blog.html  community.html  contact.html  custom-ai-workshop.html  data  deep-learning-workshop.html  events.html  faq.html  manifold  object-detection-in-the-browser.html  pathway.html  poster.html  privacy.html  quickstart.html  rss.xml  showreel  showreel-tags  showreel.html  tags  team.html  technical-deep-learning-workshop.html  thesetestimonialsdontexist.html  workshops.html
src/: .gitignore  6-week-workshop-on-deep-learning.html  LICENSE  about.html  advisory-and-consulting.html  ai-for-leadership.html  blog.html  braneshop-site.cabal  community.html  contact.html  custom-ai-workshop.html  deep-learning-workshop.html  events.html  faq.html  go  index.html  make-compressed-image  make-image-metadata  object-detection-in-the-browser.html  pathway.html  poster.html  privacy.html  quickstart.html  showreel.html  site.hs  stack.yaml  team.html  technical-deep-learning-workshop.html  thesetestimonialsdontexist.html  workshops.html
src/_site/: 6-week-workshop-on-deep-learning.html  about.html  advisory-and-consulting.html  ai-for-leadership.html  archive.html  atom.xml  blog.html  community.html  contact.html  custom-ai-workshop.html  deep-learning-workshop.html  events.html  faq.html  index.html  object-detection-in-the-browser.html  pathway.html  poster.html  privacy.html  quickstart.html  rss.xml  showreel.html  team.html  workshops.html  (+2 more)
(+997 files in other folders)
