name:                braneshop-site
version:             1.0.0.0
license:             MIT
license-file:        LICENSE
author:              Noon van der Silk
maintainer:          noonsilk+braneshop@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable braneshop-site
  main-is: site.hs
  build-depends:
    base                   >= 4.0    && < 5.0
    , text
    , system-filepath
    , transformers 
    , pandoc
    , hakyll
    , containers
    , diagrams-lib
    , hakyll-diagrams
